# concept

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: windows-ci.yml  windows-release.yml
concept/std/: array.concept  bytes.concept  crypto.concept  ecdsa.concept  http.concept  https.concept  rsa.concept  socket.concept  win_api.concept
docs/: SYNTAX.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/scripts/: package-vsix.cjs  tokenization-test.cjs  validate.cjs
editors/vscode/snippets/: concept.json
editors/vscode/syntaxes/: concept.tmLanguage.json
examples/: answer.concept  arguments.concept  arrays.concept  calculator.concept  classes.concept  crackme.concept  crypto-self-test.concept  dynamic-array.concept  ecdsa-self-test.concept  http-client.concept  http.concept  https-ecdsa.concept  https-libomath.concept  https.concept  pointers.concept  rsa-self-test.concept  shared-module.concept  socket-loopback.concept  types.concept
examples/http-root/: index.html
include/concept/: bytecode.hpp  compiler.hpp  package.hpp  vm.hpp
runtime/: dllmain.cpp  main.cpp
src/: bytecode.cpp  compiler.cpp  main.cpp  package.cpp  vm.cpp
tests/: check_runtime_strings.cmake  dll_loader.cpp  https_server.py  run_calculator.cmake  run_https_test.py  run_packaged.cmake  run_shared_module.cmake  shared-module-smoke.concept  tests.cpp
tests/fixtures/: https-cert.pem  https-ecdsa-cert.pem  https-ecdsa-key.pem  https-key.pem
tests/modules/: cycle_a.concept  cycle_b.concept  math.concept
